--- a/QuerietorTopObject/QuerietorTopObject/Site.Master
+++ b/QuerietorTopObject/QuerietorTopObject/Site.Master
@@ -75,17 +75,13 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="./index">Mi quereitor</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MainNavbar"
-                aria-controls="MainNavbar" aria-expanded="false" aria-label="Toggle Navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MainNavbar" aria-controls="MainNavbar" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="MainNavbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="./index">Inicio <span
-                        class="sr-only">(current)</span></a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about">Sobre..</a>
-                    </li>
+                    <li class="nav-item active"><a class="nav-link" href="./index">Inicio <span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"> <a class="nav-link" href="./about">Sobre..</a> </li>
                 </ul>
             </div>
         </nav>
@@ -93,50 +89,55 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
+            
             <hr />
+
             <footer>
                 <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
             </footer>
-        </div>
+        
 
-        <!-- Modal -->
-        <asp:UpdatePanel ID="UpdatePanel1" runat="server">
-            <ContentTemplate>
+            <!-- Modal -->
+            <asp:UpdatePanel ID="UpdatePanel1" runat="server">
+                <ContentTemplate>
 
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 
-                    <div class="modal-dialog">
+                        <div class="modal-dialog">
 
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Resultado</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Resultado</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+
+                                <div class="modal-body">
+                                    <p id="pMensaje"></p>
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                </div>
                             </div>
 
-                            <div class="modal-body">
-                                <p id="pMensaje"></p>
-                            </div>
-
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                            </div>
                         </div>
-
                     </div>
-                </div>
 
-                <script>
-                    function mostrarModal(resultado) {
-                        document.getElementById('pMensaje').innerHTML = resultado;
-                        $('#exampleModal').modal('show');
-                    }
-                </script>
+                    <script>
+                        function mostrarModal(resultado) {
+                            document.getElementById('pMensaje').innerHTML = resultado;
+                            $('#exampleModal').modal('show');
+                        }
+                    </script>
 
-            </ContentTemplate>
-        </asp:UpdatePanel>
-        <!-- Fin Modal -->
+                </ContentTemplate>
+
+            </asp:UpdatePanel>
+            <!-- Fin Modal -->
+              
+         </div>
     </form>
 </body>
 </html>
