--- a/QuerietorTopObject/QuerietorTopObject/Site.Master
+++ b/QuerietorTopObject/QuerietorTopObject/Site.Master
@@ -126,7 +126,8 @@
                     </div>
 
                     <script>
-                        function mostrarModal(resultado) {
+                        function mostrarModal(resultado)
+                        {
                             document.getElementById('pMensaje').innerHTML = resultado;
                             $('#exampleModal').modal('show');
                         }
